globus-gridftp-server (7.7-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 13:23:57 -0400

globus-gridftp-server (7.6-2+gt6.@distro@) @distro@; urgency=low

  * libltdl-dev dependency

 -- Globus Toolkit <support@globus.org>  Thu, 24 April 2014 12:28:36 -0400

globus-gridftp-server (7.6-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:32 -0400

globus-gridftp-server (7.5-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-gridftp-server (7.5-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-gridftp-server (7.3-1+gt6.@distro@) @distro@; urgency=low

  * Crash on DCAU N with custom net stack

 -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 11:07:03 -0500

globus-gridftp-server (7.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 09:36:57 -0500

globus-gridftp-server (7.1-1+gt6.@distro@) @distro@; urgency=low

  * Packagin fixes

 -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 11:52:23 -0500

globus-gridftp-server (7.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 15:00:44 -0500

globus-gridftp-server (6.40-1) unstable; urgency=low

  * GT-480: Implement GO plan for HTTP protocol support

 -- Globus Toolkit <support@globus.org>  Thu, 12 Dec 2013 17:30:14 -0600

globus-gridftp-server (6.39-1) unstable; urgency=low

  * GT-485: ~ defaults to / if the home dir path contains a symlink that leads outside of rp list
  * GT-487: Normalize paths passed via key=value; paramters
  * Fix possible race with command status markers
  * code cleanup