@@ -1,6 +1,6 @@
 Name:		globus-gridftp-server
 %global _name %(tr - _ <<< %{name})
-Version:	7.7
+Version:	7.8
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Globus GridFTP Server
 
@@ -169,6 +169,9 @@ fi
 %{_libdir}/pkgconfig/*.pc
 
 %changelog
+* Tue May 27 2014 Globus Toolkit <support@globus.org> - 7.8-1
+- Use package-named config.h
+
 * Thu Apr 24 2014 Globus Toolkit <support@globus.org> - 7.7-1
 - Packaging fixes
 
